<?xml version="1.0"?>
<package format="2">
  <name>seed_solutions_sdk</name>
  <version>0.0.1</version>
  <description>The seed_solutions_sdk package</description>
  <maintainer email="y.shiigi@thk.co.jp">Yasuto Shiigi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
